ipc/ipdl/test/ipdl/ok/maybe_Union.ipdl
union MaybeUnion {
    int[];
    int;
    double;
};

sync protocol maybe_Union {
parent:
    async Msg(MaybeUnion u, MaybeUnion? au) returns (MaybeUnion r);
};
