ipc/ipdl/test/ipdl/error/PExtendedAttrUnknownAttribute.ipdl
//error: unknown attribute `InvalidAttr'

[InvalidAttr] async protocol PExtendedAttrUnknownValue {
parent:
    async Msg();
};
